@@ -1,14 +1,20 @@
 --- #YAML:1.0
-name:                XML-FeedPP
-version:             0.36
-abstract:            ~
-license:             perl
-author:              ~
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Test::More:                    0
-    XML::TreePP:                   0.33
+name:               XML-FeedPP
+version:            0.37
+abstract:           ~
+author:  []
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Test::More:   0
+    XML::TreePP:  0.37
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
