@@ -6,9 +6,7 @@ my $opt = {
     VERSION_FROM        => 'lib/XML/FeedPP.pm',
     PREREQ_PM           => {
         'Test::More'        => '0',
-        'XML::TreePP'       => '0.33',
-#       'LWP::UserAgent'    => '0',
-#       'HTTP::Lite'        => '0'
+        'XML::TreePP'       => '0.37',
     },
 };
 
